@@ -12,10 +12,20 @@ include ../../build/library.make
 all-local: Mono.Posix/map.h ../lib/libMonoPosixHelper.so
 
 Mono.Posix/map.h Mono.Posix/map.c: Mono.Posix/make-map.exe ../lib/Mono.Posix.dll
-	MONO_PATH=../lib/ $(RUNTIME) Mono.Posix/make-map.exe ../lib/Mono.Posix.dll Mono.Posix/map
+	cp ../lib/Mono.Posix.dll Mono.Posix/
+ifneq ($(PLATFORM),win32)
+	MONO_PATH=../lib/ $(PLATFORM_RUNTIME) Mono.Posix/make-map.exe ../lib/Mono.Posix.dll Mono.Posix/map
+else
+	Mono.Posix/make-map.exe ..\\lib\\Mono.Posix.dll Mono.Posix/map
+endif
 
 Mono.Posix/make-map.exe: Mono.Posix/make-map.cs ../lib/Mono.Posix.dll
-	$(CSCOMPILE) Mono.Posix/make-map.cs -out:Mono.Posix/make-map.exe -r:../lib/Mono.Posix.dll
+	cp ../lib/Mono.Posix.dll Mono.Posix/
+ifneq ($(PLATFORM),win32)
+	$(CSCOMPILE)  -out:Mono.Posix/make-map.exe -r:../lib/Mono.Posix.dll Mono.Posix/make-map.cs
+else
+	$(CSCOMPILE)  -out:Mono.Posix/make-map.exe -r:../lib/Mono.Posix.dll Mono.Posix\\make-map.cs
+endif
 
 local_sources = \
 	Mono.Posix/map.c 	\
